--- a/app/public/login.html
+++ b/app/public/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>登录</title>
+    <link rel="stylesheet" href="vendor/normalize.min.css">
 </head>
 <body>
     <div id="root"></div>
