--- a/app/public/main.html
+++ b/app/public/main.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>主界面</title>
-    <link rel="stylesheet" href="vendor/normalize.min.css">
+    <link rel="stylesheet" href="vendor/antd.min.css">
     <link rel="stylesheet" href="vendor/font-awesome.min.css">
+    <style>html,body,#root{width: 100%;height: 100%;}</style>
 </head>
 <body>
     <div id="root"></div>
